k8s/prod/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: prod
spec:
  selector:
    app: backend
  ports:
    - port: 5050
      targetPort: 5050
  type: NodePort
